compositing/webgl/webgl-nonpremultiplied-blend.html is flaky on Lion https://bugs.webkit.org/show_bug.cgi?id=82412

Reviewed by Adrienne Walker.

Source/WebCore:

When compositing premultipliedAlpha=false WebGL canvases, use a separate
blend function for the alpha channel to avoid writing alpha < 1. This
makes the behavior more consistent with all other compositing results
and avoids situations where the alpha channel is preserved on some
platforms and discarded on others.

Covered by existing tests.

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::drawTextureQuad):
    Use separate alpha blend function when compositing premultipliedAlpha=false WebGL canvases.

LayoutTests:

Removed Chromium Mac-specific pixel results and failure expectations.

* platform/chromium-mac/compositing/webgl/webgl-nonpremultiplied-blend-expected.png: Removed.
* platform/chromium/TestExpectations:
    Removed expectations of failure.


Canonical link: https://commits.webkit.org/108782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122306 268f45cc-cd09-0410-ab3c-d52691b4dbfc